--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Joseph Jatuah",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
